--- a/style.css
+++ b/style.css
@@ -1,15 +1,148 @@
 html, body {
     margin: 0;
     padding: 0;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+body {
+    font-size: 16px;
 }
 * {
     box-sizing: border-box;
+    font-family: 'Roboto Condensed', sans-serif;
 }
+img {
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+    vertical-align: middle;
+}
+h1 {
+    margin: 0 0 1rem 0;
+    font-weight: bold;
+}
+
+.container {
+    width: 95%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+.container > * {
+    margin-top: 5rem;
+}
+.container > *:last-child {
+    margin-bottom: 5rem;
+}
+
+
+.searchWrapper {
+    background: #fff;
+    padding: 3rem;
+    border-radius: 8px;
+    box-shadow: 0 21px 40px 0 rgb(0 0 0 / 10%);
+}
+#searchForm {
+    display: flex;
+    gap: 3rem;
+    flex-direction: column;
+}
+#search {
+    background-color: transparent;
+    flex: 1;
+    border: 3px solid #f5f5f5;
+    border-radius: 8px;
+    padding: 1rem 3rem;
+    font-size: 1rem;
+    padding: 1.5rem 3rem;
+    transition: 0.3s ease all;
+}
+#search:focus {
+    outline: none;
+    border: 3px dashed #afc69f;
+}
+#search:hover {
+    background: #f0f0f0;
+}
+
+#searchButton {
+    background: #afc69f;
+    border: 0;
+    padding: 1.5rem 6rem;
+    color: #fff;
+    font-size: 1.2rem;
+    font-weight: bold;
+    border-radius: 0 3px 3px 0;
+    cursor: pointer;
+    border-radius: 8px;
+    transition: 0.3s ease all;
+}
+#searchButton:hover {
+    background: #adc0a1;
+}
+
+
+
 
 .favorites {
     min-height: 6rem;
-    margin: 1rem 0;
-    background-color: #aaa;
+    background-color: #3b3b3b;
+    padding: 3rem;
+    border-radius: 8px;
+    color: #fff;
+}
+.favoritesWrapper {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-gap: 1rem;
+}
+.favoritesWrapper > div {
+    position: relative;
+    cursor: pointer;
+    transition: 0.3s ease all;
+    border-radius: 1rem 0rem 1rem 1rem;
+}
+.favoritesWrapper > div:hover {
+    transform: scale(1.2);
+    z-index: 1;
+    box-shadow: 0 0 10px 0 rgb(0 0 0 / 50%);
+}
+.favoritesWrapper > div button {
+    color: #fff;
+    background: #000;
+    border: 0;
+    border-radius: 50%;
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    transition: 0.2s ease all;
+    cursor: pointer;
+}
+.favoritesWrapper > div button:hover {
+    background: red;
+}
+.favoritesWrapper > div img {
+    border-radius: 1rem 0rem 1rem 1rem;
+}
+
+.favorites p {
+    white-space: break-spaces;
+}
+
+.instructions {
+    display: none;
+    position: absolute;
+    background: #fff;
+    z-index: 1;
+    width: 200%;
+    max-width: 95vw;
+}
+.favoritesWrapper > div:hover .instructions {
+    display: block;
+}
+
+.recipes {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 0.5rem;
 }
 .recipes > div {
     min-height: 20rem;
@@ -36,4 +169,60 @@ html, body {
     color: #fff;
     font-size: 2rem;
     cursor: pointer;
+}
+
+.recipeDetails {
+    display: flex;
+    padding-top: 2rem;
+    gap: 1rem;
+}
+.recipeDetails h1 {
+    margin-top: 0;
+}
+.recipeDetails ul li::marker {
+    color: #afc69f;
+}
+.recipeDetails ul::before,
+.recipeDetails div::before {
+    color: #939393;
+    content: "Measures:";
+    font-size: 1.2rem;
+    display: block;
+    padding-bottom: 1rem;
+}
+.recipeDetails div::before {
+    content: "Ingredients:";
+}
+
+.recipeDetails div {
+    flex: 3;
+}
+.recipeDetails ul {
+    flex: 1;
+    margin: 0;
+    padding: 0;
+    list-style: inside;
+}
+.recipeDetails li span + span {
+    padding-left: 0.25rem;
+    color: #939393;
+}
+.recipeDetails div img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+}
+
+
+@media (max-width: 768px) {
+    .favoritesWrapper {
+        grid-template-columns: repeat(4, 1fr);
+    }
+    .recipes {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .recipeDetails {
+        gap: 2rem;
+        flex-direction: column;
+    }
 }
